chore: update verify email (fix loop callback)
- Update lazyload for screen and component
- Add lazyimage for image lazyloading
- Create challenge and quiz page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,7 +16,9 @@
       "title": "STUDY WITH",
       "subtitle": "ART JOURNEY",
       "description": "Learn art history & Discover the stories behind masterpieces and enhance your understanding of art.",
-      "signUp": "LET'S SIGN UP"
+      "signUp": "LET'S SIGN UP",
+      "goToLearn": "Let's Learn"
+
     },
     "stats": {
       "customers": "CUSTOMERS",
