--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -16,7 +16,9 @@
       "title": "HỌC TẬP CÙNG",
       "subtitle": "ART JOURNEY",
       "description": "Học lịch sử nghệ thuật & Khám phá câu chuyện đằng sau các kiệt tác và nâng cao hiểu biết của bạn về nghệ thuật.",
-      "signUp": "ĐĂNG KÝ NGAY"
+      "signUp": "ĐĂNG KÝ NGAY",
+      "goToLearn": "Cùng học nào"
+
     },
     "stats": {
       "customers": "KHÁCH HÀNG",
